--- a/style.css
+++ b/style.css
@@ -48,16 +48,30 @@ main {
     margin: 0 auto;
     text-align: center;
 }
+.players {
+    color: slategrey;
+}
+.current-player-name {
+    font-weight: bold;
+    color: black;
+}
 #score {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     margin: 0 auto 1rem auto;
     width: 30rem;
-    justify-content: space-between;
     font-size: 1.5rem;
+}
+#player1 {
+    text-align: left;
+}
+#player2 {
+    text-align: right;
 }
 #score-display {
     display: flex;
     justify-content: center;
+    font-weight: bold;
 }
 #win-description {
     height: 3rem;
