--- a/style.css
+++ b/style.css
@@ -1,118 +1,153 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 html {
-    /* 1rem = 16px, so when define at 62.5% 1rem = 10 px */
-    /* for responsive size, just change this font-size in media-query (for ex retina screen) */
-    font-size: 62.5%;
+  /* 1rem = 16px, so when define at 62.5% 1rem = 10 px */
+  /* for responsive size, just change this font-size in media-query (for ex retina screen) */
+  font-size: 62.5%;
+  background-image: url('./bg.png');
 }
 main {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
+}
+input[type='submit'],
+button {
+  font-size: inherit;
+  font-family: inherit;
+  margin: auto;
 }
 
 /* Home Form */
 #home {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 #home-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem auto;
-    width: 40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem auto;
+  width: 40rem;
 }
-#home-form input[type="text"] {
-    width: 10rem;
+#home-form input[type='text'] {
+  width: 10rem;
 }
 #home-form .radio-inputs {
-    margin: 0 0 0 1rem;
-    font-weight: bold;
-
+  margin: 0 0 0 1rem;
+  font-weight: bold;
 }
-#home-form input[type="submit"] {
-    margin: 1rem 0;
+#home-form input[type='submit'] {
+  margin: 1rem 0;
 }
 #home-form div {
-    margin: 0.5rem 0;
-    display: flex;
-    align-items: center;
+  margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+}
+#home-form input[type='submit']:enabled,
+#restart-button:enabled {
+  cursor: pointer;
+}
+#home-form input[type='submit'],
+#restart-button {
+  background-color: rgb(154, 94, 221);
+  border: rgb(130, 79, 189) outset 0.2rem;
+  color: rgb(250, 250, 250);
+  border-radius: 0.5rem;
+  padding: 0.3rem 0.5rem;
+}
+#home-form input[type='submit']:hover,
+#restart-button:hover {
+  background-color: rgb(178, 122, 243);
+  border: rgb(149, 94, 211) outset 0.2rem;
+}
+#home-form input[type='submit']:disabled,
+#restart-button:disabled {
+  background-color: rgb(156, 131, 184);
+  border: rgb(142, 110, 179) outset 0.2rem;
+  color: rgb(233, 233, 233);
 }
 
 /* Game UI */
 #game {
-    width: 40rem;
-    margin: 0 auto;
+  width: 40rem;
+  margin: 0 auto;
 }
-#title, #score, #game-board-zone {
-    margin: 0 auto;
-    text-align: center;
+#title,
+#score,
+#game-board-zone {
+  margin: 0 auto;
+  text-align: center;
 }
 .players {
-    color: slategrey;
+  color: slategrey;
 }
 .current-player-name {
-    font-weight: bold;
-    color: black;
+  font-weight: bold;
+  color: black;
 }
 #score {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 0 auto 1rem auto;
-    width: 30rem;
-    font-size: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 1rem auto;
+  width: 30rem;
+  font-size: 1.5rem;
 }
 #player1 {
-    text-align: left;
+  text-align: left;
 }
 #player2 {
-    text-align: right;
+  text-align: right;
 }
 #score-display {
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
 }
 #win-description {
-    height: 3rem;
-    margin: 1rem auto 0.5rem auto;
-    text-align: center;
-    font-size: 2rem;
-    font-weight: bold;
-    color: palevioletred;
+  height: 3rem;
+  margin: 1rem auto 0rem auto;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  color: palevioletred;
 }
 #restart-button {
-    display: block;
-    width: 10rem;
-    margin: 1rem auto;
+  display: block;
 }
 
 /* Game Board */
-#game-board-zone, #game-board, #game-board-mask {
-    height: 30rem;
-    width: 30rem;
+#game-board-zone,
+#game-board,
+#game-board-mask {
+  height: 30rem;
+  width: 30rem;
 }
 #game-board-zone {
-    background-color: rgb(33, 37, 99);
-    padding: 0.3rem;
-    position: relative;
+  background-color: rgb(33, 37, 99);
+  padding: 0.3rem;
+  position: relative;
+  cursor: url('pen.png') 0 50, pointer;
 }
 #game-board {
-    display: grid;
-    grid-column-gap: 0.3rem;
-    grid-row-gap: 0.3rem;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-
+  display: grid;
+  grid-column-gap: 0.3rem;
+  grid-row-gap: 0.3rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 #game-board-mask {
-    visibility: collapse;
-    position: absolute;
+  visibility: collapse;
+  position: absolute;
+  cursor: wait;
 }
 .game-cells {
-    display: flex;
-    background-color: rgb(212, 213, 236);
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
+  display: flex;
+  background-color: rgb(212, 213, 236);
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
+}
+.game-cells:hover {
+  background-color: rgb(233, 234, 248);
 }
