--- a/style.css
+++ b/style.css
@@ -6,16 +6,22 @@ html {
   /* 1rem = 16px, so when define at 62.5% 1rem = 10 px */
   /* for responsive size, just change this font-size in media-query (for ex retina screen) */
   font-size: 62.5%;
+  color: whitesmoke;
   background-image: url('./bg.png');
+  font-family: 'Nunito', sans-serif;
 }
 main {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 input[type='submit'],
 button {
   font-size: inherit;
   font-family: inherit;
   margin: auto;
+}
+#title {
+  font-weight: 700;
+  font-size: 3rem;
 }
 
 /* Home Form */
@@ -24,17 +30,33 @@ button {
 }
 #home-form {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   margin: 1rem auto;
   width: 40rem;
+}
+#home-form .player-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#home-form .symbol {
+  font-size: 2rem;
+  margin-right: 0.5rem;
 }
 #home-form input[type='text'] {
   width: 10rem;
 }
 #home-form .radio-inputs {
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+#home-form .radio-inputs input {
+  margin-right: 0.5rem;
+}
+#home-form .radio-inputs:nth-child(2) {
   margin: 0 0 0 1rem;
-  font-weight: bold;
 }
 #home-form input[type='submit'] {
   margin: 1rem 0;
@@ -54,7 +76,9 @@ button {
   border: rgb(130, 79, 189) outset 0.2rem;
   color: rgb(250, 250, 250);
   border-radius: 0.5rem;
+  font-size: 2rem;
   padding: 0.3rem 0.5rem;
+  font-weight: 700;
 }
 #home-form input[type='submit']:hover,
 #restart-button:hover {
@@ -63,9 +87,16 @@ button {
 }
 #home-form input[type='submit']:disabled,
 #restart-button:disabled {
-  background-color: rgb(156, 131, 184);
-  border: rgb(142, 110, 179) outset 0.2rem;
+  background-color: rgb(155, 155, 155);
+  border: rgb(143, 143, 143) outset 0.2rem;
   color: rgb(233, 233, 233);
+}
+
+.robot-color {
+  color: rgb(170, 224, 255);
+}
+.human-color {
+  color: rgb(255, 172, 172);
 }
 
 /* Game UI */
@@ -73,25 +104,17 @@ button {
   width: 40rem;
   margin: 0 auto;
 }
+#game-infos {
+  display: none;
+  margin: 1rem 0;
+  height: 7.9rem;
+  font-size: 2rem;
+}
 #title,
 #score,
 #game-board-zone {
   margin: 0 auto;
   text-align: center;
-}
-.players {
-  color: slategrey;
-}
-.current-player-name {
-  font-weight: bold;
-  color: black;
-}
-#score {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 1rem auto;
-  width: 30rem;
-  font-size: 1.5rem;
 }
 #player1 {
   text-align: left;
@@ -99,21 +122,42 @@ button {
 #player2 {
   text-align: right;
 }
+.player-name-display {
+  display: flex;
+  align-items: center;
+}
+#player2-display {
+  justify-content: flex-end;
+}
+#player2-display .symbol {
+  margin-left: 0.5rem;
+}
+#player1-display .symbol {
+  margin-right: 0.5rem;
+}
+.current-player-name {
+  font-weight: 900;
+  color: white;
+}
+#score {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+}
 #score-display {
   display: flex;
   justify-content: center;
-  font-weight: bold;
+  font-weight: 900;
 }
 #win-description {
   height: 3rem;
   margin: 1rem auto 0rem auto;
   text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  color: palevioletred;
+  font-weight: 700;
+  color: rgb(247, 213, 121);
 }
 #restart-button {
-  display: block;
+  position: absolute;
+  display: none;
 }
 
 /* Game Board */
@@ -127,9 +171,9 @@ button {
   background-color: rgb(33, 37, 99);
   padding: 0.3rem;
   position: relative;
-  cursor: url('pen.png') 0 50, pointer;
 }
 #game-board {
+  color: rgb(48, 48, 48);
   display: grid;
   grid-column-gap: 0.3rem;
   grid-row-gap: 0.3rem;
@@ -139,7 +183,18 @@ button {
 #game-board-mask {
   visibility: collapse;
   position: absolute;
-  cursor: wait;
+}
+#game-board-mask.visible {
+  visibility: visible;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#game-board-mask p {
+  color: black;
+  background-color: rgb(241, 234, 247);
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.5rem;
 }
 .game-cells {
   display: flex;
@@ -150,4 +205,22 @@ button {
 }
 .game-cells:hover {
   background-color: rgb(233, 234, 248);
+  cursor: url('pen.png') 0 50, pointer;
+}
+.game-cells.fa-sun:hover,
+.game-cells.fa-moon:hover {
+  background-color: rgb(212, 213, 236);
+  cursor: default;
+}
+@keyframes pop {
+  from {
+    transform: scale(0, 0);
+  }
+  to {
+    transform: scale(1, 1);
+  }
+}
+.fa-sun:before,
+.fa-moon:before {
+  animation: pop 0.3s cubic-bezier(0.68, 1.45, 0.81, 1.1);
 }
