--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ html {
   background-image: url('./bg.png');
   font-family: 'Nunito', sans-serif;
 }
+body {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  overflow: visible;
+}
 /* prevent the default focus outline on chrome */
 :focus {
   outline: transparent none 0px;
@@ -270,6 +276,32 @@ button {
 .round-results-grids .fa-sun:before,
 .round-results-grids .fa-moon:before {
   animation: none;
+}
+
+/******** footer ********/
+#footer {
+  background: black;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  font-size: 1.6rem;
+}
+#footer p {
+  text-align: center;
+  color: whitesmoke;
+  margin: 1rem 10vw;
+}
+#footer a {
+  color: rgb(0, 132, 255);
+  text-decoration: none;
+}
+#footer a:visited {
+  color: rgb(148, 42, 248);
+}
+#footer a:hover {
+  color: rgb(104, 180, 250);
 }
 
 /* mobile */
